src/test/deca/context/invalid/renduInitial/05unknownType.deca
{
	int x;
	x y;
	y=1;
}